2008-08-23  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* evolution/wscript:
	* gnomeapplet/wscript:
	* gnomedesktop/wscript:
	* gnomekeyring/wscript:
	* gnomeprint/wscript:
	* gtksourceview/wscript:
	* mediaprofiles/wscript:
	* metacity/wscript:
	* nautilusburn/wscript:
	* rsvg/wscript:
	* totem/wscript:
	* wnck/wscript:
	* wscript:
	Bug 548535 – pygtk-codegen-2.0 -> pygobject-codegen-2.0 (WAF part).

=== 2.23.0 ===
2008-06-15  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* NEWS: Update.

2008-05-31  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* evolution/wscript:
	* gnomeapplet/wscript:
	* gnomedesktop/wscript:
	* gnomekeyring/wscript:
	* gnomeprint/wscript:
	* gtksourceview/wscript:
	* mediaprofiles/wscript:
	* metacity/wscript:
	* nautilusburn/wscript:
	* rsvg/wscript:
	* totem/wscript:
	* wnck/wscript:
	* wscript:  Add a WAf option to enable only selected modules, like
	Arun Raghavan's patch for configure.ac.

2008-05-24  Arun Raghavan  <arunisgod@gmail.com>

	reviewed by: Gustavo Carneiro

	* Makefile.am:
	* configure.ac:
	* docs/Makefile.am:
	Bug 534307 – configure script could really use the ability to
	select particular modules.

2008-05-09  John Stowers  <john.stowers@gmail.com>

	* evolution/ebook.defs: Wrap more addressbook functions, is_opened, 
	is_writable, is_online, open, new_{default,system}_addressbook, get_uri,
	set_default_addressbook.

	* evolution/evo-contact.c (evo_contact_get_name): Stop warning when
	contact doesnt have a name set.

2008-05-09  John Stowers  <john.stowers@gmail.com>

	* evolution/ebook.defs:
	* evolution/ecal.defs:
	* evolution/evo-addressbook.c (evo_addressbook_get_uid):
	* evolution/evo-addressbook.h:
	* evolution/evo-calendar.c (evo_cal_source_get_uid):
	* evolution/evo-calendar.h:
	* examples/evolution/evo-test.py: Wrap e_source_peek_uid() as
	ebook.get_uid() and ecalsource.get_uid(). Fixes #519258

2008-05-04  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* docs/gnomeprint/wscript: